feat:finish user part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,13 @@ add_executable(code
         src/disk/disk_manager.cpp
         src/buffer/lru_k_replacer.cpp
         src/buffer/buffer_pool_manager.cpp
-        src/storage/main.cpp
         src/include/common/map.h
         src/include/common/vector.h
         src/include/common/list.h
         src/management/user.cpp
         src/include/management/user.h
         src/include/common/util.h
+        src/management/main.cpp
+        src/management/train.cpp
+        src/include/management/train.h
 )
